Witness a run's width, a joining member, a lost member and a refused start
On real members: a target of eight on three members runs three on each
as planned, and its load reads as landed; a member joining a running
pipeline is named as one the run was not planned for while the run
keeps its execution and width past the engine's scale-up delay; a
member lost under a run is replaced by one run planned for the member
left, which names the run it replaced and what moved its width; and a
member that cannot stage the target's connector refuses the start by
name, which goes ahead once it can.